--- a/src/App.css
+++ b/src/App.css
@@ -301,7 +301,11 @@ form.contact__form {
      --tiny-font-size: 11px;
 
    }
-
+   .modal__img {
+    width: 100% !important;
+    height: 160px !important;
+    /* object-fit: none !important; */
+}
    .resume__container {
      grid-template-columns: repeat(1, 1fr) !important;
    }
