--- a/src/pages/portfolio/portfolio.css
+++ b/src/pages/portfolio/portfolio.css
@@ -89,8 +89,8 @@ filter: invert(.8);: Partial inversion, 80% of the colors are inverted, and 20% 
 
 .modal__img {
     width: 100%;
-    /* height: 290px; */
-    /* object-fit: cover; */
+    height: 290px;
+    object-fit: cover;
 }
 
 .model_title {
