--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -14,7 +14,8 @@
         /*x*/
     object-fit: cover;
     /* border-radius:30% 70% 70% 30% / 30% 30% 70% 70%  ; */
-    border-radius: 66% 92% 77% 40% / 97% 96% 71% 73%;
+    /* border-radius: 66% 92% 77% 40% / 97% 96% 71% 73%; */
+    border-radius: 10%;
     box-shadow: 1px 2px 17px 5px var(--first-color);
     z-index: 1;
     animation: floatImage 4s ease-in-out infinite;
